# shared-automation-modules

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci-ai.yml  ci-storage.yml  ci.yml
docs/: USAGE.md
src/shared_modules/: __init__.py
src/shared_modules/ai/: __init__.py
src/shared_modules/ai/tts/: __init__.py  base.py  generator.py
src/shared_modules/config/: __init__.py  manager.py
src/shared_modules/core/: __init__.py  exceptions.py
tests/: conftest.py  test_storage.py
tests/unit/: test_config.py
